<resources>
    <string name="app_name">Vanessa</string>
    <string name="p_ssaro">pássaro</string>
    <string name="logotipo_vanessa">logotipo vanessa</string>
    <string name="logotipo_f_e_f_technologies">logotipo f e f technologies</string>
    <string name="descri_o_do_acr_nimo_vanessa">descrição do acrônimo vanessa</string>
    <string name="vanessa">vanessa</string>
    <string name="j_possuo_login">Já possuo login</string>
    <string name="quero_me_cadastrar">Quero me cadastrar</string>
    <string name="veicular_automation">Veicular Automation,</string>
    <string name="and_security_with_arduino">and security with arduino.</string>
    <string name="next_generation_eletronic_systems">next-generation eletronic systems</string>
    <string name="registre_se_em_va_nes_sa">Registre-se em VA.NES-SA:</string>
    <string name="p_ssaro_da_logo_de_vanessa">pássaro da logo de vanessa</string>
    <string name="tipo_de_ve_culo">Tipo de Veículo:</string>
    <string name="moto">Moto</string>
    <string name="carro">Carro</string>
    <string name="voltar">voltar</string>
    <string name="salvar">salvar</string>
    <string name="apagar">apagar</string>
    <string name="ano_de_fabrica_o">Ano de Fabricação</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="placa">Placa</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
</resources>